# qt-layout-handler

./: CMakeLists.txt  constants.h  crophandleitem.cpp  crophandleitem.h  draghandlewidget.cpp  draghandlewidget.h  drawingmanager.cpp  drawingmanager.h  guidelineitem.cpp  guidelineitem.h  laserpointeritem.cpp  laserpointeritem.h  layoutscene.cpp  layoutscene.h  layoutserializer.cpp  layoutserializer.h  main.cpp  mainwindow.cpp  mainwindow.h  mirroredappitem.cpp  mirroredappitem.h  newlayoutdialog.cpp  newlayoutdialog.h  officetoolbar.cpp  officetoolbar.h  projectorwindow.cpp  projectorwindow.h  propertiesdialog.cpp  propertiesdialog.h  resizableappitem.cpp  resizableappitem.h  resources.qrc  rulerbar.cpp  rulerbar.h  settingsdialog.cpp  settingsdialog.h  snappingitemgroup.cpp  snappingitemgroup.h  snappingutils.cpp  snappingutils.h  (+4 more)
